claude-exp: iteration 8